# c-vcpkg-sdl3-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: googletest-config.cmake  imgui-config.cmake
core/: CMakeLists.txt
core/include/: App.h  ColorPicker.h
core/src/: ColorPicker.c
imgui-wrapper/: CMakeLists.txt
imgui-wrapper/include/: ImGui_Backends.h  ImGui_ContextManagement.h  ImGui_DrawData.h  ImGui_EventProcessing.h  ImGui_FrameManagement.h  ImGui_Widgets.h  ImGui_WindowManagement.h
imgui-wrapper/src/: ImGui_Backends.cpp  ImGui_ContextManagement.cpp  ImGui_DrawData.cpp  ImGui_EventProcessing.cpp  ImGui_FrameManagement.cpp  ImGui_Widgets.cpp  ImGui_WindowManagement.cpp
src/: main.c
test/: CMakeLists.txt  Test.cc
test/include/: Utils.h
test/src/: Test.cc
