CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
project(template-project)

# SET C++ LANGUAGE STANDARD
SET(CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# LINK SDL3 LIBRARY (TO ENTIRE PROJECT)
FIND_PACKAGE(SDL3 CONFIG REQUIRED)

# ADD SUBDIRECTORIES
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(external)

# CREATE EXECUTABLE
set(MAIN_FILE ./src/main.c)
add_executable(main ${MAIN_FILE})

# INCLUDE CORE TO TARGET
TARGET_INCLUDE_DIRECTORIES(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

# LINK LIBARIES TO TARGET
TARGET_LINK_LIBRARIES(main PRIVATE 
    core
    SDL3::SDL3
)

# LINK SDL3-IMAGE
find_package(SDL3_image CONFIG REQUIRED)
target_link_libraries(main PRIVATE $<IF:$<TARGET_EXISTS:SDL3_image::SDL3_image-shared>,SDL3_image::SDL3_image-shared,SDL3_image::SDL3_image-static>)

# LINK SDL3-TTF (FONTS)
find_package(SDL3_ttf CONFIG REQUIRED)
target_link_libraries(main PRIVATE SDL3_ttf::SDL3_ttf)

# HANDLE TESTING
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
ADD_TEST(NAME unit_tests COMMAND unit_tests)