CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# SET PROJECT NAME
PROJECT(template-project)

# SET LANGUAGE STANDARD
SET(CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# CUSTOM EXTERNAL DEPENDENCIES
SET(CUSTOM_CONFIG_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_PREFIX_PATH ${CUSTOM_CONFIG_PATH} ${CMAKE_PREFIX_PATH})
FIND_PACKAGE(imgui REQUIRED)
FIND_PACKAGE(googletest REQUIRED)

# MANAGED EXTERNAL DEPENDENCIES (VCPKG)
FIND_PACKAGE(SDL3 CONFIG REQUIRED)
FIND_PACKAGE(SDL3_ttf CONFIG REQUIRED)
FIND_PACKAGE(SDL3_image CONFIG REQUIRED)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(imgui-wrapper)

# CREATE EXECUTABLE
SET(MAIN_FILE ./src/main.c)
ADD_EXECUTABLE(main ${MAIN_FILE})

# INCLUDE LIBRARIES IN TARGET
TARGET_LINK_LIBRARIES(main PRIVATE 
    core
    imgui-wrapper
    SDL3::SDL3
    SDL3_ttf::SDL3_ttf
    SDL3_image::SDL3_image-shared
)

# HANDLE TESTING
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
ADD_TEST(NAME unit_tests COMMAND unit_tests)