CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# GET ALL SOURCE FILES
FILE(GLOB C_SOURCES src/*.c)

# ADD CORE LIBRARY
ADD_LIBRARY(core STATIC ${C_SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

# LINK DEPENDENCIES
TARGET_LINK_LIBRARIES(core PUBLIC SDL3::SDL3)