CMAKE_MINIMUM_REQUIRED(VERSION 3.16 FATAL_ERROR)

# GET ALL SOURCE FILES
FILE(GLOB SOURCES src/*.cpp)

# ADD IMGUI WRAPPER LIBRARY
ADD_LIBRARY(imgui-wrapper STATIC ${SOURCES})

# INCLUDE HEADER FILES
TARGET_INCLUDE_DIRECTORIES(imgui-wrapper PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

# LINK DEPENDENCIES
TARGET_LINK_LIBRARIES(imgui-wrapper PUBLIC imgui SDL3::SDL3)