# GET ALL SOURCE FILES
FILE(GLOB TEST_SOURCES *.cc)

ADD_EXECUTABLE(unit_tests ${SOURCES} ${TEST_SOURCES})

TARGET_INCLUDE_DIRECTORIES(unit_tests PRIVATE include)

TARGET_LINK_LIBRARIES(unit_tests PRIVATE
    core
    SDL3::SDL3
    gtest_main
)

# AUTO DISCOVER TESTS
INCLUDE(GoogleTest)
GTEST_DISCOVER_TESTS(unit_tests)